--- a/assets/css/mai-asknews.css
+++ b/assets/css/mai-asknews.css
@@ -23,7 +23,31 @@ body {
 		var(--color-border) 24px
 	);
 	--button-font-weight: var(--heading-font-weight);
+	--avatar-border-radius: 100vw;
+	--site-header-wrap-max-width: 100vw;
 	/* --site-header-background: var(--color-gradient-dark); */
+}
+
+.title-area .custom-logo-link {
+	margin-bottom: -42px !important;
+}
+
+.menu-dashboard {
+	font-size: var(--font-size-sm);
+}
+
+@media only screen and (max-width: 799px) {
+
+	.nav-header-right .menu-item:not(.menu-dashboard) {
+		display: none !important;
+	}
+}
+
+@media only screen and (min-width: 800px) {
+
+	.nav-after-header {
+		display: none !important;
+	}
 }
 
 .nav-after-header {
@@ -588,6 +612,14 @@ body {
 	border-bottom: 4px solid var(--color-primary);
 }
 
+.pm-vote__avatar {
+	display: block;
+	width: 64px;
+	height: 64px;
+	margin: calc(var(--spacing-sm) * -1) auto var(--spacing-md);
+	border-radius: 100vw;
+}
+
 .pm-vote__form {
 	--button-width: 100%;
 	display: grid;
@@ -613,7 +645,7 @@ body {
 		font-weight: var(--body-font-weight-bold);
 		line-height: 1;
 		text-transform: uppercase;
-		background-color: white;
+		background-color: lightgreen;
 		color: var(--color-header);
 		border-radius: 10rem;
 		content: "Your Vote!";
@@ -991,8 +1023,31 @@ body {
 		display: none;
 	}
 
+	/* login text link */
+	/* form description, added this for the beat-the-bot free registration form */
+	/* total price (free) */
+	.rcp_login_link,
+	.rcp_description,
+	.rcp_registration_total {
+		display: none;
+	}
+
 	.rcp_user_fieldset {
-		/* display: none; */
+		> p {
+			margin-bottom: var(--spacing-md);
+		}
+
+		label {
+			margin-bottom: var(--spacing-xxxxs);
+		}
+
+		label::after {
+			display: inline-block;
+			margin-left: var(--spacing-xxxs);
+			font-size: var(--font-size-xs);
+			color: red;
+			content: "(required)";
+		}
 	}
 
 	.rcp_subscription_fieldset {
@@ -1128,6 +1183,14 @@ body {
 		border: 0;
 		overflow: hidden;
 	}
+}
+
+#rcp_registration_form {
+	padding: 0 !important;
+}
+
+#rcp_registration_form:has(.rcp_subscription_fieldset) .rcp_user_fieldset {
+	display: none;
 }
 
 #rcp_discount_code_wrap {
