--- a/assets/css/mai-asknews.css
+++ b/assets/css/mai-asknews.css
@@ -193,21 +193,45 @@ body {
 .pm-prediction__list {
 	--list-style-type: none;
 	--list-margin: 0;
-	display: table;
+	--list-item-margin: 0;
+	display: grid;
+	gap: var(--spacing-xxs);
 	align-self: start; /* when a flex-item via .entry-wrap */
 	font-size: var(--font-size-sm);
 }
 
 .pm-prediction__item {
-	display: table-row;
+	display: flex;
+	gap: var(--spacing-sm);
+	align-items: center;
 }
 
-.pm-prediction__item > * {
-	display: table-cell;
+.pm-prediction__item.label {
+	display: block;
+	margin-bottom: var(--spacing-xxs);
+	font-size: .75em;
+	font-weight: var(--body-font-weight-bold);
+	text-transform: uppercase;
+	letter-spacing: 1px;
 }
 
-.pm-prediction__item > strong {
-	padding-right: var(--spacing-xs);
+.pm-prediction__item.choice::before,
+.pm-prediction__item.probability::before {
+	width: 1.2em;
+	height: 1.2em;
+	background: currentColor;
+	mask-position: center;
+	mask-repeat: no-repeat;
+	mask-size: contain;
+	content: "";
+}
+
+.pm-prediction__item.choice::before {
+	mask-image: url( 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Pro 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2024 Fonticons, Inc.--><path d="M80 160l26.7-53.3L160 80l-53.3-26.7L80 0 53.3 53.3 0 80l53.3 26.7L80 160zm352 128l-26.7 53.3L352 368l53.3 26.7L432 448l26.7-53.3L512 368l-53.3-26.7L432 288zm-208-192l16-32 32-16-32-16-16-32-16 32-32 16 32 16 16 32zm208 96c8.8 0 16-7.2 16-16v-34.1L502 82c13.8-15.2 13.2-38.5-1.3-53.1l-17.7-17.6c-14.5-14.5-37.8-15.1-53-1.4L157.3 256H112c-8.8 0-16 7.2-16 16v39.3l-78.5 70.8-.1 .1C6.7 391.9 .4 405.7 0 420.1c-.4 14.4 5.3 28.6 15.5 38.8l37.5 37.5c9.9 9.9 23.5 15.6 37.5 15.6 22.2 0 35.6-13.4 39.3-17.5L402.8 192h29.2zM94.2 462.4c-.8 .9-4.2 3.2-7.2 .2l-37.5-37.5c-3-3-.7-6.4 .2-7.3L455.5 51.6l4.9 4.9L94.2 462.4z"/></svg>' );
+}
+
+.pm-prediction__item.probability::before {
+	mask-image: url( 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Pro 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2024 Fonticons, Inc.--><path d="M384 32H64C28.7 32 0 60.7 0 96v320c0 35.4 28.7 64 64 64h320c35.4 0 64-28.7 64-64V96c0-35.4-28.7-64-64-64zm16 384c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V96c0-8.8 7.2-16 16-16h320c8.8 0 16 7.2 16 16v320zM128 128c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zm96 96c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zm-96 96c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zm192-192c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zm0 192c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32z"/></svg>' );
 }
 
 /* Archives */
@@ -729,8 +753,6 @@ body {
 
 
 	.pm-prediction__list {
-		--list-item-margin: 0 0 var(--spacing-xxxs);
-		margin: 0;
 		font-size: var(--font-size-md);
 	}
 
