--- a/assets/css/mai-asknews.css
+++ b/assets/css/mai-asknews.css
@@ -24,6 +24,7 @@ body {
 	);
 	--button-font-weight: var(--heading-font-weight);
 	--avatar-border-radius: 100vw;
+	--site-header-background: var(--background-gradient-dark);
 	--site-header-wrap-max-width: 100vw;
 	/* --site-header-background: var(--color-gradient-dark); */
 }
@@ -39,6 +40,10 @@ body {
 
 	.menu-item-button > .menu-item-link.button {
 		--menu-font-size: var(--font-size-xs);
+	}
+
+	.menu-item:not(.menu-dashboard) .menu-item-link-current:not(.button) > span {
+		border-bottom: 1px solid currentColor;
 	}
 }
 
@@ -67,8 +72,11 @@ body {
 	}
 }
 
+.nav-header,
 .nav-after-header {
 	--menu-font-weight: var(--heading-font-weight);
+	--menu-item-name-filter-hover: none;
+	--menu-item-link-color-hover: var(--color-primary);
 }
 
 .button:not(.button-link) {
@@ -565,7 +573,8 @@ body {
 	grid-template-columns: repeat(6, 1fr);
 	position: sticky;
 	top: var(--body-top);
-	background-color: var(--color-header);
+	/* background-color: var(--color-header); */
+	background: var(--background-gradient-dark);
 	border-bottom: 3px solid var(--color-primary);
 	overflow-x: auto;
 	z-index: 9;
@@ -648,7 +657,8 @@ body {
 	margin-bottom: 0;
 	padding: var(--spacing-xl);
 	text-align: center;
-	background-color: var(--color-header);
+	/* background-color: var(--color-header); */
+	background: var(--background-gradient-dark);
 	color: white;
 	border-bottom: 4px solid var(--color-primary);
 }
@@ -674,11 +684,13 @@ body {
 		position: relative;
 	}
 
-	.button.selected::after {
-		display: inline-block;
+	.pm-vote__selected {
+		position: relative;
+		display: flex;
+		align-items: center;
 		width: auto;
 		position: absolute;
-		top: calc(100% - var(--spacing-xxs));
+		top: calc(100% - var(--spacing-xxxs));
 		left: 50%;
 		transform: translateX(-50%);
 		padding: var(--spacing-xxxs) var(--spacing-xs);
@@ -686,10 +698,22 @@ body {
 		font-weight: var(--body-font-weight-bold);
 		line-height: 1;
 		text-transform: uppercase;
-		background-color: lightgreen;
+		fill: currentColor;
 		color: var(--color-header);
-		border-radius: 10rem;
-		content: "Your Vote!";
+		background-color: lightgreen;
+		border-radius: 100vw;
+	}
+
+	.pm-vote__selected::before {
+		/* triangle pointing up */
+		position: absolute;
+		bottom: 100%;
+		left: calc(50% - 6px);
+		width: 0;
+		height: 0;
+		border: 6px solid;
+		border-color: transparent transparent lightgreen transparent;
+		content: "";
 	}
 }
 
@@ -724,6 +748,7 @@ body {
 		padding: var(--spacing-lg);
 		color: var(--color-white);
 		background-color: var(--color-accent);
+		/* background: var(--background-gradient-light); */
 		font-family: monospace;
 		border-radius: 12px;
 	}
@@ -1058,6 +1083,14 @@ body {
 }
 
 .rcp_form {
+	input[type="email"],
+	input[type="password"],
+	input[type="text"] {
+		margin: var(--input-margin, 0) !important;
+		padding: var(--input-padding, .9em) !important;
+		color: var(--input-color, var(--color-body)) !important;
+	}
+
 	.rcp_subscription_message {
 		display: none;
 	}
