--- a/assets/css/mai-asknews.css
+++ b/assets/css/mai-asknews.css
@@ -45,6 +45,10 @@ body {
 	.menu-item:not(.menu-dashboard) .menu-item-link-current:not(.button) > span {
 		border-bottom: 1px solid currentColor;
 	}
+
+	.avatar {
+		border: 1px solid white;
+	}
 }
 
 .menu-dashboard {
@@ -77,7 +81,7 @@ body {
 	--menu-font-weight: var(--heading-font-weight);
 	--menu-item-name-filter-hover: none;
 
-	.menu-item:not(.menu-dashboard) .menu-item-link-current:not(.button):not(:hover):not(:focus) {
+	.menu-item:not(.menu-dashboard) .menu-item-link:not(.button) {
 		--menu-item-link-color-hover: var(--color-primary);
 	}
 }
@@ -671,6 +675,7 @@ body {
 	width: 64px;
 	height: 64px;
 	margin: calc(var(--spacing-sm) * -1) auto var(--spacing-md);
+	border: 1px solid white;
 	border-radius: 100vw;
 }
 
@@ -1055,28 +1060,21 @@ body {
 	padding: var(--spacing-md) var(--spacing-lg);
 }
 
-.site-footer {
+footer.site-footer {
 	position: relative;
+	margin-top: var(--spacing-xl);
 }
 
 .site-footer::before {
-	position: absolute;
-	bottom: calc(100% - 24px);
-	right: var(--spacing-xxxl);
+	position: relative;
 	display: block;
 	width: 200px;
 	height: 200px;
+	margin: 0 var(--side-spacing) -24px auto;
 	background: url( '/wp-content/plugins/mai-asknews/assets/img/chad-footer.png' ) no-repeat;
 	background-size: contain;
 	z-index: 1;
 	content: "";
-}
-
-@media only screen and (max-width: 920px) {
-
-	.site-footer {
-		margin-top: var(--spacing-xxxxl);
-	}
 }
 
 /* Plugins */
