--- a/src/css/mai-asknews.css
+++ b/src/css/mai-asknews.css
@@ -130,27 +130,62 @@ body {
 }
 
 .pm-notice {
-	display: flex;
-	padding: var(--spacing-xxxs) var(--spacing-sm) var(--spacing-xxxs) 0;
-	background: white;
+	position: relative;
+	display: var(--pm-notice-display, flex);
+	align-items: center;
+	padding: var(--spacing-xxxs) var(--spacing-sm);
+	color: var(--pm-notice-color, var(--color-body));
+	background: var(--pm-notice-background, white);
 	border: var(--border);
 	border-left: 0;
 }
 
-.pm-notice.error {
-	background: var(--color-primary);
-	color: white;
+.pm-notice::before {
+	display: grid;
+	place-items: center;
+	width: 1em;
+	height: 1em;
+	margin: calc(var(--spacing-xxxs) * -1) var(--spacing-xs) calc(var(--spacing-xxxs) * -1) 0;
+	background: var(--pm-notice-icon-color, currentColor);
+	mask-position: center;
+	mask-repeat: no-repeat;
+	mask-size: contain;
 }
-.pm-notice.error::before {
-	background: var(--color-primary-dark);
+
+.pm-notice::after {
+	position: absolute;
+	top: -1px;
+	left: 0;
+	width: 4px;
+	height: calc(100% + 2px);
+	background: var(--pm-notice-icon-color, currentColor);
+	content: "";
+}
+
+.pm-notice.success {
+	--pm-notice-icon-color: var(--color-success);
+}
+
+.pm-notice.warning {
+	--pm-notice-icon-color: orange;
+}
+
+.pm-notice.error {
+	--pm-notice-icon-color: var(--color-primary);
+}
+
+.pm-notice.success::before {
+	mask-image: url( 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z"/></svg>' );
+	content: "";
+}
+
+.pm-notice.warning::before {
+	mask-image: url( 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Pro 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2024 Fonticons, Inc.--><path d="M256 8C119 8 8 119.1 8 256c0 137 111 248 248 248s248-111 248-248C504 119.1 393 8 256 8zm0 448c-110.5 0-200-89.4-200-200 0-110.5 89.5-200 200-200 110.5 0 200 89.5 200 200 0 110.5-89.4 200-200 200zm42-104c0 23.2-18.8 42-42 42s-42-18.8-42-42 18.8-42 42-42 42 18.8 42 42zm-81.4-211.4l6.8 136c.3 6.4 5.6 11.4 12 11.4h41.2c6.4 0 11.7-5 12-11.4l6.8-136c.3-6.9-5.1-12.6-12-12.6h-54.8c-6.9 0-12.3 5.7-12 12.6z"/></svg>' );
+	content: "";
 }
 
 .pm-notice::before {
-	display: block;
-	width: 5px;
-	margin-block: calc((var(--spacing-xxxs) + 1px) * -1);
-	margin-right: var(--spacing-xs);
-	background: var(--color-primary);
+	mask-image: url( 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm101.8-262.2L295.6 256l62.2 62.2c4.7 4.7 4.7 12.3 0 17l-22.6 22.6c-4.7 4.7-12.3 4.7-17 0L256 295.6l-62.2 62.2c-4.7 4.7-12.3 4.7-17 0l-22.6-22.6c-4.7-4.7-4.7-12.3 0-17l62.2-62.2-62.2-62.2c-4.7-4.7-4.7-12.3 0-17l22.6-22.6c4.7-4.7 12.3-4.7 17 0l62.2 62.2 62.2-62.2c4.7-4.7 12.3-4.7 17 0l22.6 22.6c4.7 4.7 4.7 12.3 0 17z"/></svg>' );
 	content: "";
 }
 
@@ -753,6 +788,19 @@ body {
 	content: "";
 }
 
+.pm-vote {
+	--pm-notice-display: inline-flex;
+}
+
+@media only screen and (max-width: 599px) {
+
+	.pm-vote,
+	.pm-commentary,
+	.pm-prediction {
+		margin-inline: calc(var(--side-spacing) * -1);
+	}
+}
+
 .pm-actions {
 	--button-width: 100%;
 	display: grid;
@@ -811,37 +859,6 @@ body {
 	.button:has(.pm-loading) {
 		text-indent: -200vw; /* To hide the () that make the button keep the same height. */
 		cursor: wait;
-	}
-}
-
-@keyframes pmSpin {
-	0% {
-		transform: rotate(0deg);
-	}
-	100% {
-		transform: rotate(360deg);
-	}
-}
-
-@keyframes pmFadeInUp {
-	0% {
-		opacity: 0;
-		bottom: calc(100% - var(--spacing-xs));
-	}
-	100% {
-		opacity: 1;
-		bottom: calc(100% - var(--spacing-xxxxs));
-	}
-}
-
-@keyframes pmFadeInDown {
-	0% {
-		opacity: 0;
-		top: calc(100% - var(--spacing-xs));
-	}
-	100% {
-		opacity: 1;
-		top: calc(100% - var(--spacing-xxxxs));
 	}
 }
 
@@ -1041,11 +1058,130 @@ body {
 	content: "";
 }
 
-.pm-commentary {
+.pm-commentarysub {
 	padding: var(--spacing-lg);
-	/* background: var(--background-gradient-dark); */
-	background: var(--color-alt-dark);
+	background-color: var(--color-alt-dark);
 	border-left: 6px solid gold;
+
+	.pm-commentarysub__header {
+		display: grid;
+		grid-template-columns: auto 1fr;
+		align-items: center;
+		gap: var(--spacing-xxxxs) var(--spacing-md);
+		margin-bottom: var(--spacing-lg);
+	}
+
+	.pm-commentarysub__avatar {
+		grid-row: 1 / span 2;
+		display: block;
+		width: 64px;
+		height: 64px;
+		border-radius: 100vw;
+	}
+
+	.pm-commentarysub__heading {
+		font-family: var(--heading-font-family);
+		font-weight: var(--heading-font-weight);
+		font-size: var(--font-size-lg);
+	}
+
+	.pm-commentarysub__desc {
+		font-size: var(--font-size-sm);
+		line-height: var(--line-height-md);
+	}
+
+	.pm-commentarysub__form {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.ql-toolbar {
+		background-color: var(--color-alt);
+	}
+
+	.ql-editor {
+		min-height: 12cap;
+	}
+
+	.ql-editor ol,
+	.ql-editor ul,
+	.ql-editor p {
+		margin-bottom: var(--spacing-md);
+	}
+
+	.pm-commentarysub__textarea {
+		background-color: var(--color-white);
+	}
+
+	.pm-commentarysub__submit {
+		margin-top: var(--spacing-sm);
+		margin-left: auto;
+		--button-background: var(0, 0, 0, 0.25);
+	}
+
+	.mce-toolbar .mce-btn button:hover,
+	.mce-toolbar .mce-btn button:focus {
+		background-color: inherit;
+	}
+}
+
+.pm-commentarysub:has(.pm-commentarysub__textarea:placeholder-shown) .pm-commentarysub__submit {
+	cursor: not-allowed;
+}
+
+.pm-commentary {
+	display: grid;
+	gap: var(--spacing-sm);
+	padding: var(--spacing-lg);
+	background: var(--color-alt);
+}
+
+.pm-commentary__comment {
+	display: grid;
+	grid-template-columns: auto 1fr;
+	gap: var(--spacing-sm) var(--spacing-md);
+	padding: var(--spacing-md);
+	font-size: var(--font-size-sm);
+	background-color: var(--color-white);
+	border-bottom: var(--border);
+	border-bottom-width: 2px;
+	border-radius: 12px;
+
+	.pm-commentary__avatar {
+		display: block;
+		width: 64px;
+		height: 64px;
+		border-radius: 100vw;
+	}
+
+	.pm-commentary__heading {
+		place-self: center start;
+		font-family: var(--heading-font-family);
+		font-weight: var(--heading-font-weight);
+		font-size: var(--font-size-lg);
+	}
+
+	br {
+		display: block;
+		margin-bottom: 1em;
+	}
+
+	br + br {
+		display: none;
+	}
+}
+
+@media only screen and (max-width: 599px) {
+
+	.pm-commentary__content {
+		grid-column: 1 / span 2;
+	}
+}
+
+@media only screen and (min-width: 600px) {
+	.pm-commentary__avatar {
+		grid-row: 1 / span 2;
+	}
 }
 
 .pm-prediction {
@@ -1401,6 +1537,99 @@ footer.site-footer {
 	background-size: contain;
 	z-index: 1;
 	content: "";
+}
+
+/* Leaderboard */
+
+/* .pm-leaderboard__item::marker {
+	color: var(--color-body);
+} */
+
+.pm-leaderboard__list {
+	list-style-type: none;
+	margin: 0;
+}
+
+.pm-leaderboard__item {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: .5em;
+	margin: 0;
+	padding-block: 4px;
+	border-bottom: var(--border);
+}
+
+.pm-leaderboard__item.bot-user,
+.pm-leaderboard__item.current-user {
+	padding-inline: 4px;
+	border-bottom: 2px solid var(--color-primary);
+}
+
+.pm-leaderboard__item.bot-user {
+	color: var(--color-white);
+	background: var(--background-gradient-dark);
+}
+
+.pm-leaderboard__item.current-user {
+	background: var(--color-alt);
+}
+
+.pm-leaderboard__name {
+	font-size: var(--font-size-xs);
+}
+
+.pm-leaderboard__score {
+	font-size: var(--font-size-sm);
+}
+
+/* Stats */
+
+.pm-userstats {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+	gap: var(--spacing-sm);
+	margin-bottom: var(--spacing-xl);
+}
+
+.pm-userstats__section {
+	display: block;
+	list-style-type: none;
+	margin: 0;
+	padding: var(--spacing-sm);
+	background-color: var(--color-alt);
+}
+
+.pm-userstats__heading {
+	font-family: var(--heading-font-family);
+	font-weight: var(--heading-font-weight);
+	font-size: var(--font-size-md);
+}
+
+.pm-userstats__item {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin: 0;
+	padding: 2px 0;
+}
+
+.pm-userstats__item:last-child {
+	margin-bottom: calc(var(--spacing-xxxs) * -1);
+	padding-bottom: 0;
+}
+
+.pm-userstats__item:not(:last-child) {
+	border-bottom: var(--border);
+}
+
+.pm-userstats__label {
+	font-size: var(--font-size-xs);
+	/* text-transform: uppercase; */
+}
+
+.pm-userstats__value {
+	font-size: var(--font-size-sm);
 }
 
 /***********************************************
@@ -1806,4 +2035,35 @@ body {
 #rcp_profile_editor_form {
 	display: grid;
 	gap: var(--spacing-xl);
+}
+
+@keyframes pmSpin {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
+@keyframes pmFadeInUp {
+	0% {
+		opacity: 0;
+		bottom: calc(100% - var(--spacing-xs));
+	}
+	100% {
+		opacity: 1;
+		bottom: calc(100% - var(--spacing-xxxxs));
+	}
+}
+
+@keyframes pmFadeInDown {
+	0% {
+		opacity: 0;
+		top: calc(100% - var(--spacing-xs));
+	}
+	100% {
+		opacity: 1;
+		top: calc(100% - var(--spacing-xxxxs));
+	}
 }
