--- a/src/css/mai-askthebot.css
+++ b/src/css/mai-askthebot.css
@@ -1,7 +1,20 @@
 .askthebot-container {
 	display: grid;
-	grid-template-columns: min(300px, 25%) 1fr;
 	gap: 3em;
+}
+
+@media only screen and (max-width: 600px) {
+
+	.askthebot-chats {
+		order: 2;
+	}
+}
+
+@media only screen and (min-width: 600px) {
+
+	.askthebot-container {
+		grid-template-columns: min(300px, 25%) 1fr;
+	}
 }
 
 .askthebot-chatlist {
