--- a/src/css/mai-askthebot.css
+++ b/src/css/mai-askthebot.css
@@ -98,9 +98,7 @@
 .askthebot-form {
 	position: sticky;
 	bottom: 0;
-	/* margin-top: var(--spacing-md); */
-	/* padding-block: var(--spacing-md) var(--spacing-xl); */
-	padding-bottom: var(--spacing-xl);
+	padding-block: var(--spacing-lg) var(--spacing-xl);
 	background: linear-gradient(to bottom, transparent, white var(--spacing-xxl));
 }
 
