--- a/src/css/mai-asknews.css
+++ b/src/css/mai-asknews.css
@@ -78,20 +78,27 @@ body {
 	font-size: var(--font-size-sm);
 }
 
-@media only screen and (max-width: 599px) {
-
-	.menu-dashboard .menu-item-link {
-		font-size: 0;
-	}
-}
-
 @media only screen and (max-width: 799px) {
+
+	.header-right {
+		--header-section-display: flex;
+		--nav-header-width: auto;
+	}
 
 	.nav-header-right {
 		.sub-menu,
 		.menu-item-has-children > a::after,
 		.menu-item:not(.menu-dashboard):not(.menu-item-button):not(.menu-item-last.menu-item-icon) {
 			display: none !important;
+		}
+	}
+
+	.menu-dashboard {
+		--menu-item-link-padding: 0;
+
+		.menu-item-link {
+			width: 56px;
+			font-size: 0;
 		}
 	}
 }
@@ -294,7 +301,7 @@ body {
 
 .pm-prediction__item.choice::before,
 .pm-prediction__item.probability::before,
-.pm-prediction__item.score::before {
+.pm-prediction__item.spread::before {
 	width: 1.2em;
 	height: 1.2em;
 	background: currentColor;
@@ -317,9 +324,11 @@ body {
 	mask-image: url( 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Pro 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2024 Fonticons, Inc.--><path d="M384 32H64C28.7 32 0 60.7 0 96v320c0 35.4 28.7 64 64 64h320c35.4 0 64-28.7 64-64V96c0-35.4-28.7-64-64-64zm16 384c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V96c0-8.8 7.2-16 16-16h320c8.8 0 16 7.2 16 16v320zM128 128c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zm96 96c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zm-96 96c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zm192-192c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zm0 192c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32z"/></svg>' );
 }
 
-.pm-prediction__item.score::before {
+.pm-prediction__item.spread::before {
 	-webkit-mask-image: url( 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Pro 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2024 Fonticons, Inc.--><path d="M342.2 281.7l-52.4-7.6-23.4-47.5c-2.1-4.3-6.2-6.4-10.3-6.4-4.1 0-8.2 2.1-10.3 6.4l-23.4 47.5-52.4 7.6c-9.4 1.4-13.2 13-6.4 19.6l37.9 37-9 52.2c-1.3 7.5 4.7 13.4 11.3 13.4 1.8 0 3.6-.4 5.3-1.4l46.9-24.7 46.9 24.7c1.7 .9 3.6 1.3 5.3 1.3 6.7 0 12.6-6 11.3-13.4l-9-52.2 37.9-37c6.8-6.6 3.1-18.2-6.3-19.6zM496 0H338.1c-11.2 0-21.7 5.9-27.4 15.5L256 106.7l-54.7-91.1A32 32 0 0 0 173.9 0H16C3.1 0-4.5 14.6 2.9 25.2l114 162.9C84.2 222.5 64 268.9 64 320c0 105.9 86.1 192 192 192s192-86.1 192-192c0-51.1-20.2-97.5-52.9-132L509.1 25.2C516.5 14.6 508.9 0 496 0zM77.5 48h87.3l50.6 84.4c-22.1 4.8-42.7 13.5-61.3 25.1L77.5 48zM400 320c0 79.5-64.5 144-144 144s-144-64.5-144-144 64.5-144 144-144 144 64.5 144 144zm-42.2-162.5c-18.6-11.7-39.2-20.4-61.3-25.1L347.2 48h87.3l-76.7 109.5z"/></svg>' );
 	mask-image: url( 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Pro 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2024 Fonticons, Inc.--><path d="M342.2 281.7l-52.4-7.6-23.4-47.5c-2.1-4.3-6.2-6.4-10.3-6.4-4.1 0-8.2 2.1-10.3 6.4l-23.4 47.5-52.4 7.6c-9.4 1.4-13.2 13-6.4 19.6l37.9 37-9 52.2c-1.3 7.5 4.7 13.4 11.3 13.4 1.8 0 3.6-.4 5.3-1.4l46.9-24.7 46.9 24.7c1.7 .9 3.6 1.3 5.3 1.3 6.7 0 12.6-6 11.3-13.4l-9-52.2 37.9-37c6.8-6.6 3.1-18.2-6.3-19.6zM496 0H338.1c-11.2 0-21.7 5.9-27.4 15.5L256 106.7l-54.7-91.1A32 32 0 0 0 173.9 0H16C3.1 0-4.5 14.6 2.9 25.2l114 162.9C84.2 222.5 64 268.9 64 320c0 105.9 86.1 192 192 192s192-86.1 192-192c0-51.1-20.2-97.5-52.9-132L509.1 25.2C516.5 14.6 508.9 0 496 0zM77.5 48h87.3l50.6 84.4c-22.1 4.8-42.7 13.5-61.3 25.1L77.5 48zM400 320c0 79.5-64.5 144-144 144s-144-64.5-144-144 64.5-144 144-144 144 64.5 144 144zm-42.2-162.5c-18.6-11.7-39.2-20.4-61.3-25.1L347.2 48h87.3l-76.7 109.5z"/></svg>' );
+	/* -webkit-mask-image: url( 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Pro 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2024 Fonticons, Inc.--><path d="M259.7 86l49.6 20.7 20.7 49.6a6.7 6.7 0 0 0 11.9 0l20.7-49.6 49.6-20.7a6.7 6.7 0 0 0 0-11.9L362.7 53.3l-20.7-49.6a6.7 6.7 0 0 0 -11.9 0l-20.7 49.6-49.6 20.7a6.7 6.7 0 0 0 0 11.9zm249.4 133.3L469.3 202.7l-16.6-39.7a5.3 5.3 0 0 0 -9.5 0L426.7 202.7 387 219.2a5.3 5.3 0 0 0 0 9.5L426.7 245.3l16.6 39.7a5.3 5.3 0 0 0 9.5 0l16.6-39.7 39.7-16.6a5.3 5.3 0 0 0 0-9.5zM364.3 267.3 259.5 252l-46.9-95.2a22.8 22.8 0 0 0 -20.7-12.8 22.4 22.4 0 0 0 -20.5 12.8l-46.9 95.2L19.7 267.3C.9 270-6.7 293.2 7 306.5L82.9 380.5 64.9 485.1C62.3 500 74.2 512 87.5 512a22.2 22.2 0 0 0 10.7-2.7l93.8-49.4L285.8 509.3a22.9 22.9 0 0 0 33.3-24.2L301.2 380.5l75.9-74C390.7 293.2 383.1 270 364.3 267.3zM249.5 363.8l13.7 79.4-71.2-37.5-71.3 37.5 13.7-79.4L76.6 307.5l79.8-11.6 35.6-72.2 35.6 72.2 79.8 11.6z"/></svg>' ); */
+	/* mask-image: url( 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Pro 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2024 Fonticons, Inc.--><path d="M259.7 86l49.6 20.7 20.7 49.6a6.7 6.7 0 0 0 11.9 0l20.7-49.6 49.6-20.7a6.7 6.7 0 0 0 0-11.9L362.7 53.3l-20.7-49.6a6.7 6.7 0 0 0 -11.9 0l-20.7 49.6-49.6 20.7a6.7 6.7 0 0 0 0 11.9zm249.4 133.3L469.3 202.7l-16.6-39.7a5.3 5.3 0 0 0 -9.5 0L426.7 202.7 387 219.2a5.3 5.3 0 0 0 0 9.5L426.7 245.3l16.6 39.7a5.3 5.3 0 0 0 9.5 0l16.6-39.7 39.7-16.6a5.3 5.3 0 0 0 0-9.5zM364.3 267.3 259.5 252l-46.9-95.2a22.8 22.8 0 0 0 -20.7-12.8 22.4 22.4 0 0 0 -20.5 12.8l-46.9 95.2L19.7 267.3C.9 270-6.7 293.2 7 306.5L82.9 380.5 64.9 485.1C62.3 500 74.2 512 87.5 512a22.2 22.2 0 0 0 10.7-2.7l93.8-49.4L285.8 509.3a22.9 22.9 0 0 0 33.3-24.2L301.2 380.5l75.9-74C390.7 293.2 383.1 270 364.3 267.3zM249.5 363.8l13.7 79.4-71.2-37.5-71.3 37.5 13.7-79.4L76.6 307.5l79.8-11.6 35.6-72.2 35.6 72.2 79.8 11.6z"/></svg>' ); */
 }
 
 /* Archives */
